2021-07-06  Omar Polo  <op@omarpolo.com>

	* configure (guessing_cflags): try to preserve CFLAGS/LDFLAGS

2021-07-02  Omar Polo  <op@omarpolo.com>

	* sandbox.c (filter): seccomp filter reworked: now it should work on x86 and possibly other arches too!

2021-06-29  Omar Polo  <op@omarpolo.com>

	* parse.y (conf): don't require the strict order macro > options > servers
	c-like strings: when two or more strings are next to each others, concat them

	* gmid.c (main): add -D to define macros from the cmd line

	* parse.y (yylex): allow to define macros in the config file

	* gmid.c (main): use getopt_long, add --help as synonym of -h and -V/--version

2021-06-17  Omar Polo  <op@omarpolo.com>

	* gmid.1: document `log' option

2021-06-16  Omar Polo  <op@omarpolo.com>

	* parse.y (yylex): drop the dependency on lex by implementing
	yylex by ourselves (the actual implementation is based off doas'
	parse.y).  This gave us various benefits, like cleaner code, \ to
	break long lines, better handling of quotes etc...

2021-06-11  Omar Polo  <op@omarpolo.com>

	* parse.y (servopt): add `param' keyword

	* fcgi.c (send_fcgi_req): send GATEWAY_INTERFACE, AUTH_TYPE,
	REMOTE_USER, TLS_CLIENT_ISSUER, TLS_CLIENT_HASH, TLS_VERSION,
	TLS_CIPHER, TLS_CIPHER_STRENGTH and TLS_CLIENT_NOT_BEFORE/AFTER.
	(send_fcgi_req): support a custom list of params

2021-05-24  Omar Polo  <op@omarpolo.com>

	* gg.c: move `gg' to regress, as it's only used for the tests

2021-05-12  Omar Polo  <op@omarpolo.com>

	* utils.c (gen_certificate): don't add gmid as organisation when generating the certificate, and now it set the version 3, so it's compatible with java/android

2021-05-09  Omar Polo  <op@omarpolo.com>

	* server.c (apply_fastcgi): added fastcgi support!

2021-05-03  Omar Polo  <op@omarpolo.com>

	* parse.y: errors on duplicate values instead of silently using only the last value.

2021-04-30  Omar Polo  <op@omarpolo.com>

	* server.c (fmt_sbuf): ensure %p (path) is always absolute
